m3d.h

    typedef float M3D_FLOAT;
    typedef double M3D_FLOAT;
    typedef uint32_t M3D_INDEX;
    typedef uint16_t M3D_INDEX;
    /* vertex entry */
    typedef struct
    {
        M3D_FLOAT x; /* 3D coordinates and weight */
        M3D_FLOAT y;
        M3D_FLOAT z;
        M3D_FLOAT w;
        uint32_t color;   /* default vertex color */
        M3D_INDEX skinid; /* skin index */
#ifdef M3D_VERTEXTYPE
        uint8_t type;
#endif
    } m3dv_t;
    /* material property formats */
    enum
    {
        m3dpf_color,
        m3dpf_uint8,
        m3dpf_uint16,
        m3dpf_uint32,
        m3dpf_float,
        m3dpf_map
    };
    typedef struct
    {
        uint8_t format;
        uint8_t id;
#ifdef M3D_ASCII
#define M3D_PROPERTYDEF(f, i, n) \
    {                            \
        (f), (i), (char *)(n)    \
    }
        char *key;
#else
#define M3D_PROPERTYDEF(f, i, n) \
    {                            \
        (f), (i)                 \
    }
#endif
    } m3dpd_t;
    /* material property types */
    /* You shouldn't change the first 8 display and first 4 physical property. Assign the rest as you like. */
    enum
    {
        m3dp_Kd = 0, /* scalar display properties */
        m3dp_Ka,
        m3dp_Ks,
        m3dp_Ns,
        m3dp_Ke,
        m3dp_Tf,
        m3dp_Km,
        m3dp_d,
        m3dp_il,

        m3dp_Pr = 64, /* scalar physical properties */
        m3dp_Pm,
        m3dp_Ps,
        m3dp_Ni,
        m3dp_Nt,

        m3dp_map_Kd = 128, /* textured display map properties */
        m3dp_map_Ka,
        m3dp_map_Ks,
        m3dp_map_Ns,
        m3dp_map_Ke,
        m3dp_map_Tf,
        m3dp_map_Km, /* bump map */
        m3dp_map_D,
        m3dp_map_N, /* normal map */

        m3dp_map_Pr = 192, /* textured physical map properties */
        m3dp_map_Pm,
        m3dp_map_Ps,
        m3dp_map_Ni,
        m3dp_map_Nt
    };
    enum
    { /* aliases */
      m3dp_bump = m3dp_map_Km,
      m3dp_map_il = m3dp_map_N,
      m3dp_refl = m3dp_map_Pm
    };
    /* material property */
    typedef struct
    {
        uint8_t type; /* property type, see "m3dp_*" enumeration */
        union
        {
            uint32_t color;      /* if value is a color, m3dpf_color */
            uint32_t num;        /* if value is a number, m3dpf_uint8, m3pf_uint16, m3dpf_uint32 */
            float fnum;          /* if value is a floating point number, m3dpf_float */
            M3D_INDEX textureid; /* if value is a texture, m3dpf_map */
        } value;
    } m3dp_t;
    /* material entry */
    typedef struct
    {
        char *name;      /* name of the material */
        uint8_t numprop; /* number of properties */
        m3dp_t *prop;    /* properties array */
    } m3dm_t;