src/bindings.rs

#[test]
fn bindgen_test_layout_m3dv_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dv_t>(),
        24usize,
        concat!("Size of: ", stringify!(m3dv_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dv_t>(),
        4usize,
        concat!("Alignment of ", stringify!(m3dv_t))
    );
    fn test_field_x() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dv_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).x) as usize - ptr as usize
            },
            0usize,
            concat!("Offset of field: ", stringify!(m3dv_t), "::", stringify!(x))
        );
    }
    test_field_x();
    fn test_field_y() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dv_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).y) as usize - ptr as usize
            },
            4usize,
            concat!("Offset of field: ", stringify!(m3dv_t), "::", stringify!(y))
        );
    }
    test_field_y();
    fn test_field_z() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dv_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).z) as usize - ptr as usize
            },
            8usize,
            concat!("Offset of field: ", stringify!(m3dv_t), "::", stringify!(z))
        );
    }
    test_field_z();
    fn test_field_w() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dv_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).w) as usize - ptr as usize
            },
            12usize,
            concat!("Offset of field: ", stringify!(m3dv_t), "::", stringify!(w))
        );
    }
    test_field_w();
    fn test_field_color() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dv_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).color) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dv_t),
                "::",
                stringify!(color)
            )
        );
    }
    test_field_color();
    fn test_field_skinid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dv_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).skinid) as usize - ptr as usize
            },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dv_t),
                "::",
                stringify!(skinid)
            )
        );
    }
    test_field_skinid();
}
pub const m3dpf_color: _bindgen_ty_1 = 0;
pub const m3dpf_uint8: _bindgen_ty_1 = 1;
pub const m3dpf_uint16: _bindgen_ty_1 = 2;
pub const m3dpf_uint32: _bindgen_ty_1 = 3;
pub const m3dpf_float: _bindgen_ty_1 = 4;
pub const m3dpf_map: _bindgen_ty_1 = 5;
pub type _bindgen_ty_1 = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dpd_t {
    pub format: u8,
    pub id: u8,
}
#[test]
fn bindgen_test_layout_m3dpd_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dpd_t>(),
        2usize,
        concat!("Size of: ", stringify!(m3dpd_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dpd_t>(),
        1usize,
        concat!("Alignment of ", stringify!(m3dpd_t))
    );
    fn test_field_format() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dpd_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).format) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dpd_t),
                "::",
                stringify!(format)
            )
        );
    }
    test_field_format();
    fn test_field_id() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dpd_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).id) as usize - ptr as usize
            },
            1usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dpd_t),
                "::",
                stringify!(id)
            )
        );
    }
    test_field_id();
}
pub const m3dp_Kd: _bindgen_ty_2 = 0;
pub const m3dp_Ka: _bindgen_ty_2 = 1;
pub const m3dp_Ks: _bindgen_ty_2 = 2;
pub const m3dp_Ns: _bindgen_ty_2 = 3;
pub const m3dp_Ke: _bindgen_ty_2 = 4;
pub const m3dp_Tf: _bindgen_ty_2 = 5;
pub const m3dp_Km: _bindgen_ty_2 = 6;
pub const m3dp_d: _bindgen_ty_2 = 7;
pub const m3dp_il: _bindgen_ty_2 = 8;
pub const m3dp_Pr: _bindgen_ty_2 = 64;
pub const m3dp_Pm: _bindgen_ty_2 = 65;
pub const m3dp_Ps: _bindgen_ty_2 = 66;
pub const m3dp_Ni: _bindgen_ty_2 = 67;
pub const m3dp_Nt: _bindgen_ty_2 = 68;
pub const m3dp_map_Kd: _bindgen_ty_2 = 128;
pub const m3dp_map_Ka: _bindgen_ty_2 = 129;
pub const m3dp_map_Ks: _bindgen_ty_2 = 130;
pub const m3dp_map_Ns: _bindgen_ty_2 = 131;
pub const m3dp_map_Ke: _bindgen_ty_2 = 132;
pub const m3dp_map_Tf: _bindgen_ty_2 = 133;
pub const m3dp_map_Km: _bindgen_ty_2 = 134;
pub const m3dp_map_D: _bindgen_ty_2 = 135;
pub const m3dp_map_N: _bindgen_ty_2 = 136;
pub const m3dp_map_Pr: _bindgen_ty_2 = 192;
pub const m3dp_map_Pm: _bindgen_ty_2 = 193;
pub const m3dp_map_Ps: _bindgen_ty_2 = 194;
pub const m3dp_map_Ni: _bindgen_ty_2 = 195;
pub const m3dp_map_Nt: _bindgen_ty_2 = 196;
pub type _bindgen_ty_2 = ::std::os::raw::c_int;
pub const m3dp_bump: _bindgen_ty_3 = 134;
pub const m3dp_map_il: _bindgen_ty_3 = 136;
pub const m3dp_refl: _bindgen_ty_3 = 193;
pub type _bindgen_ty_3 = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct m3dp_t {
    pub type_: u8,
    pub value: m3dp_t__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union m3dp_t__bindgen_ty_1 {
    pub color: u32,
    pub num: u32,
    pub fnum: f32,
    pub textureid: M3D_INDEX,
}
#[test]
fn bindgen_test_layout_m3dp_t__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<m3dp_t__bindgen_ty_1>(),
        4usize,
        concat!("Size of: ", stringify!(m3dp_t__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dp_t__bindgen_ty_1>(),
        4usize,
        concat!("Alignment of ", stringify!(m3dp_t__bindgen_ty_1))
    );
    fn test_field_color() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dp_t__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).color) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dp_t__bindgen_ty_1),
                "::",
                stringify!(color)
            )
        );
    }
    test_field_color();
    fn test_field_num() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dp_t__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).num) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dp_t__bindgen_ty_1),
                "::",
                stringify!(num)
            )
        );
    }
    test_field_num();
    fn test_field_fnum() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dp_t__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).fnum) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dp_t__bindgen_ty_1),
                "::",
                stringify!(fnum)
            )
        );
    }
    test_field_fnum();
    fn test_field_textureid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dp_t__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).textureid) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dp_t__bindgen_ty_1),
                "::",
                stringify!(textureid)
            )
        );
    }
    test_field_textureid();
}
#[test]
fn bindgen_test_layout_m3dp_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dp_t>(),
        8usize,
        concat!("Size of: ", stringify!(m3dp_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dp_t>(),
        4usize,
        concat!("Alignment of ", stringify!(m3dp_t))
    );
    fn test_field_type() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dp_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dp_t),
                "::",
                stringify!(type_)
            )
        );
    }
    test_field_type();
    fn test_field_value() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dp_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).value) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dp_t),
                "::",
                stringify!(value)
            )
        );
    }
    test_field_value();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dm_t {
    pub name: *mut ::std::os::raw::c_char,
    pub numprop: u8,
    pub prop: *mut m3dp_t,
}
